gcc/testsuite/g++.dg/overload/ellipsis2.C
// PR c++/60253

struct A
{
  ~A();
};

struct B
{
  B(...);
};

B b(0, A());  // { dg-error "cannot pass" }
